# kard

./: AUTHORS  CMakeLists.txt  CREDITS  ChangeLog  Doxyfile  Makefile.am  TODO
doc/: CMakeLists.txt  index.docbook
mockups/: crsc-app-kard.svgz
src/: CMakeLists.txt  Makefile.am  Messages.sh  generalui.ui  kard.cpp  kard.desktop  kard.h  kard.kcfg  kardsettings.kcfgc  kardtheme.cpp  kardtheme.h  kardui.rc  kardview.cpp  kardview.h  kardwidget.cpp  kardwidget.h  main.cpp  theme.ui  themeui.ui  timer.ui  version.h
src/data/: CMakeLists.txt
src/data/fr/: CMakeLists.txt  Makefile.am  syllables.txt
src/kgametheme/: kgametheme.h
src/pics/: CMakeLists.txt
src/pics/animals/: CMakeLists.txt  Makefile.am
src/pics/food/: CMakeLists.txt  Makefile.am
src/pics/house/: CMakeLists.txt
src/pics/opposites/: CMakeLists.txt
src/pics/theme1/: CMakeLists.txt  Makefile.am
src/pics/theme2/: CMakeLists.txt  Makefile.am
src/sounds/: CMakeLists.txt
src/sounds/game/: CMakeLists.txt  Makefile.am
themes/: CMakeLists.txt  default.desktop
